# preflex-rl

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: preferences.yaml
scripts/: crew_debrief.py
src/preflex_rl/: __init__.py  __main__.py  debrief.py  dqn.py  minimax_debrief.py  preferences.py  shaping.py  train.py
tests/: test_debrief.py  test_dqn.py  test_minimax_debrief.py  test_minimax_strip.py  test_preferences.py  test_shaping.py  test_train_smoke.py
